# notmuch-gmail

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  setup.cfg  setup.py
docs/: index.md
notmuch_gmail/: __init__.py  __main__.py  cache.py  cli.py  config.py  gapi.py  maildir.py  status.py  util.py
