# vim: ft=dosini
# This file is part of notmuch-gmail-sync.
#
# It is released under the MIT license (see the LICENSE file for more details).

[metadata]
name = notmuch-gmail-sync
version = attr: notmuch_gmail.VERSION
description = Bidirectional sync of Gmail messages with notmuch database
long_description = file: README.md
url = https://github.com/rjarry/notmuch-gmail-sync
license = MIT
author = Robin Jarry
author_email = robin@jarry.cc
keywords = notmuch, gmail, notmuchmail, oauth2, email
classifiers =
	Development Status :: 1 - Planning
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3 :: Only
	Topic :: Communications :: Email :: Email Clients (MUA)

[options]
python_requires = >= 3.3
install_requires =
	google-api-python-client
	oauth2client
packages = find:
zip_safe = True
scripts =
	bin/notmuch-gmail
